<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.zeroinbit.payback.app.MainActivity$PlaceholderFragment">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">
                <Spinner
                    android:id="@+id/type_of_transaction"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/type_of_transaction"
                    android:visibility="visible"
                    android:layout_weight="1"/>
                <Spinner
                    android:id="@+id/split_amount"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/full_split_amount"
                    android:visibility="visible"
                    android:layout_weight="1"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textStyle="bold"/>
                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/dollar_sign"
                            android:textStyle="bold"/>
                        <EditText
                            android:id="@+id/amount_total"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            android:imeOptions="actionDone"
                            android:hint="@string/edit_amount_hint"/>
                        </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="5px"
                    android:layout_height="fill_parent"
                    android:background="#DADADA"/>
                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/split_number_of_people"
                        android:textStyle="bold"/>
                    <EditText
                        android:id="@+id/split_by"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:imeOptions="actionDone"
                        android:hint="@string/split_number_of_people_hint"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_calculate"
                android:onClick="split"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Buy"
                android:onClick="onBuyPressed"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
